clusters/beryjuio-home/dl-stack/nzbget-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: nzbget
    app.kubernetes.io/instance: main
  name: nzbget
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nzbget
      app.kubernetes.io/instance: main
  serviceName: "nzbget"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nzbget
        app.kubernetes.io/instance: main
    spec:
      securityContext:
        runAsUser: 1024
        runAsGroup: 100
        fsGroup: 100
        fsGroupChangePolicy: Always
      containers:
        - name: nzbget
          image: ghcr.io/onedr0p/nzbget:21.1
          resources:
            requests:
              memory: "300Mi"
              cpu: "0.5"
            limits:
              memory: "750Mi"
          ports:
            - containerPort: 6789
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: nzbget
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
