clusters/beryjuio-home/dl-stack/radarr-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: main
  name: radarr
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: main
  serviceName: "radarr"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: main
        io.jela.stack: dl
    spec:
      securityContext:
        runAsUser: 1024
        runAsGroup: 100
        fsGroup: 100
        fsGroupChangePolicy: Always
      containers:
        - name: radarr
          image: ghcr.io/onedr0p/radarr:4.2.4.6635
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 7878
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: media-temp
              mountPath: /media-temp
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: media-temp
          persistentVolumeClaim:
            claimName: media-temp-pvc
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: radarr
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
