clusters/beryjuio-home/dl-stack/sabnzbd-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: main
  name: sabnzbd
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
      app.kubernetes.io/instance: main
  serviceName: "sabnzbd"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app.kubernetes.io/instance: main
    spec:
      securityContext:
        runAsUser: 1024
        runAsGroup: 100
        fsGroup: 100
        fsGroupChangePolicy: Always
      containers:
        - name: sabnzbd
          image: ghcr.io/onedr0p/sabnzbd:v3.7.0
          resources:
            requests:
              memory: "2Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9090
              name: https
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
  volumeClaimTemplates:
    - metadata:
        name: config
        labels:
          app.kubernetes.io/name: sabnzbd
          app.kubernetes.io/instance: main
          snapshot.home.arpa/enabled: "true"
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
