clusters/beryjuio-home/dl-stack/nzbget-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: dl-stack
spec:
  ingressClassName: istio
  rules:
    - host: nzbget.${CLUSTER_NAME}.k8s.beryju.org
      http:
        paths:
          - backend:
              service:
                name: nzbget
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - nzbget.${CLUSTER_NAME}.k8s.beryju.org
      secretName: beryjuio-dl-stack-nzbget
